# SlintProject

./: .env  .gitignore  Cargo.toml  Diagrama del Sistema.drawio  Dioxus.toml  HECHOS.JSON  README.md  index.html  package-lock.json  package.json  process.html  process.js  process2.html  process2.js  prods.json  sqlite.db  styles.css
.history/: .env_20240620215439  .gitignore_20240514064943  Cargo_20240620200829.toml  Cargo_20240620201738.toml  Cargo_20240620201804.toml  Cargo_20240620201809.toml  Cargo_20240620201812.toml  Cargo_20240620201832.toml  Cargo_20240620202151.toml  Cargo_20240620202349.toml  Cargo_20240620202353.toml  Cargo_20240620205143.toml  Cargo_20240620205147.toml  Cargo_20240620205150.toml  Cargo_20240620205152.toml  Cargo_20240620205156.toml  Cargo_20240620205159.toml  Cargo_20240620205247.toml  Cargo_20240620205420.toml  Cargo_20240620205824.toml  Cargo_20240620214408.toml  README_20240514064943.md
assets/: main.css
memory/: .gitignore  Cargo.toml  build.rs
src/: App.jsx  add-product.html  app.rs  index.html  index.js  main.js  main.jsx  main.rs  styles.css
src-tauri/: .env  .gitignore  Cargo.toml  Configs.json  Pesables.json  Productos.json  Proveedores.json  Relaciones.json  Rubros.json  db.sqlite  db.sqlite-journal  tauri.conf.json
src-tauri/entity/: mod.rs  post.rs  prelude.rs
src-tauri/entity/src/: caja.rs  cliente.rs  codigo_barras.rs  config.rs  deuda.rs  medio_pago.rs  mod.rs  movimiento.rs  pago.rs  pesable.rs  prelude.rs  producto.rs  proveedor.rs  relacion_prod_prov.rs  relacion_venta_pago.rs  relacion_venta_pes.rs  relacion_venta_prod.rs  relacion_venta_rub.rs  rubro.rs  user.rs  vendedor.rs  venta.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: caja.rs  cliente.rs  config.rs  deuda.rs  lib.rs  m20220101_000001_create_table.rs  medio_pago.rs  mod.rs  movimiento.rs  pago.rs  pesable.rs  producto.rs  relacion_prod_prov.rs  relacion_venta_pes.rs  relacion_venta_prod.rs  relacion_venta_rub.rs  rubro.rs  user.rs  venta.rs
src-tauri/migrations/: 20240521144619_medios_pago.sql  20240521152353_cajas.sql  20240521152804_clientes.sql  20240521153059_config.sql  20240521153146_proveedor.sql  20240521153146_proveedores.sql  20240521153429_codigo.sql  20240521153429_codigos.sql  20240521153618_pesable.sql  20240521153618_pesables.sql  20240521154045_rubro.sql  20240521154636_producto.sql  20240521154636_productos.sql  20240521155107_user.sql  20240521155107_users.sql  20240521212131_deudas.sql  20240521215516_pagos.sql  20240521231433_relacion_venta_pes.sql  20240521232647_relacion_venta_prod.sql  20240521233525_relacion_venta_rub.sql  20240521234346_ventas.sql
src-tauri/src/: main.rs  sqlite.db
src-tauri/src/db/: manage.rs  mod.rs  models.rs
src-tauri/src/mods/: caja.rs  cliente.rs  cmd.rs  cmds.rs  config.rs  error.rs  lib.rs  mod.rs  pago.rs  pesable.rs  producto.rs  proveedor.rs  relacion_prod_prov.rs  rubro.rs  sistema.rs  tests.rs  user.rs  valuable.rs  vendedor.rs  venta.rs
src-tauri/test/: db.sqlite
src/backend/: Cargo.toml  Productos.json
src/backend/entity/: Cargo.toml
src/backend/entity/src/: cliente.rs  codigo_barras.rs  medio_pago.rs  prelude.rs  relacion_prod_prov.rs  relacion_venta_prod.rs
src/backend/migration/src/: caja.rs  codigo_barras.rs  lib.rs  movimiento.rs  proveedor.rs  relacion_venta_prod.rs  relacion_venta_rub.rs  rubro.rs
src/backend/src/: caja.rs  cliente.rs  cmd.rs  config.rs  error.rs  fns.rs  lib.rs  pago.rs  relacion_prod_prov.rs  sistema.rs  tests.rs  user.rs  venta.rs
src/backend/src/mods/: caja.rs
(+2230 files in other folders)
