[package]
name = "dioxi-cash"
version = "0.1.0"
authors = ["Lucas <lucase.igarzabal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "src/backend"]
[dependencies]

dioxus = { version = "0.5", features = ["desktop"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
