[package]
name = "dioxi-cash"
version = "0.1.0"
authors = ["Lucas <lucase.igarzabal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "src/backend","src/frontend"]
[dependencies]
backend ={ path = "src/backend"}
frontend = { path = "src/frontend"}
dioxus = { version = "0.5", features = ["desktop","router"] }
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
