[package]
name = "leptoscash"
version = "0.0.0"
description = "A Tauri App"
authors = ["RstyDev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version= "0.7.4", features = ["sqlite", "runtime-tokio", "tls-rustls", "macros", "chrono"] }
chrono = {version= "0.4.38" ,features = ["serde"] }
thiserror = "1.0.61"
dotenvy = "0.15.7"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
