[package]
name = "backend"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "backend"
path = "src/lib.rs"



[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
serde = { version = "1.0", features = ["derive"] }
dioxus = { version = "0.5", features = ["desktop"] }
serde_json = "1.0"
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
full = "0.1.0"
async-std = "1.12.0"
tokio = { version = "1.35.0", features = ["macros"] }
chrono = "0.4.31"
thiserror = "1.0.56"
rand = "0.8.5"
cargo-tarpaulin = "=0.25.2"


